# nuclear-back

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  entrypoint_ollama.sh  entrypoint_worker.sh  pyproject.toml
src/: celery_app.py  main.py
src/api/: exception_handlers.py
src/api/routers/: __init__.py  health.py  reports.py
src/application/dto/: recommendations.py  reports.py  vulnerability.py
src/application/services/: recommendations.py  report.py  scanner.py  uploads.py
src/application/use_cases/: scan.py
src/config/: __init__.py
src/domain/aggregates/: report.py
src/domain/exceptions/: __init__.py  report.py
src/domain/vaule_objects/: pagination.py  recommendations.py  report.py  severity.py  vulnerability.py
src/infrastructure/: container.py
src/infrastructure/adapters/: compression.py  config.py  db.py  ml.py  storage.py
src/infrastructure/repositories/: report.py
src/ports/: compression.py  db.py  ml.py  repo.py  report_repo.py  storage.py
src/worker/: tasks.py
